objects/Team_Room_Account__c.object
<CustomObject>
    <description>FV2 : This objects is used for Team Room Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>FV2 : This field is used for storing Master Detail relationship to Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Team Room Accounts</relationshipLabel>
        <relationshipName>Team_Room_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Association_Type__c</fullName>
        <description>FV2 : This field is used for storing Association Type.</description>
        <label>Association Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Third Party Account</fullName>
                    <default>true</default>
                    <label>Third Party Account</label>
                </value>
                <value>
                    <fullName>Primary Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Room__c</fullName>
        <description>FV2 : This field is used for storing Master Detail relationship to Team Room.</description>
        <label>Team Room</label>
        <referenceTo>Team_Room__c</referenceTo>
        <relationshipLabel>Team Room Accounts</relationshipLabel>
        <relationshipName>Team_Room_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Unique_Account_Association__c</fullName>
        <description>FV2 : Unique Account Association field.</description>
        <label>Unique Account Association</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Team Room Account</label>
    <nameField>
        <displayFormat>TRA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Room Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_One_Account_For_External_Single</fullName>
        <active>true</active>
        <description>FV2:To validate that there is only one account associated to External single party Team room</description>
        <errorConditionFormula>AND
(
Team_Room__r.RecordType.Name =&apos;GLOBALFOUNDRIES with Single party&apos;,
Team_Room__r.Num_Associated_Accs__c&gt;0

)</errorConditionFormula>
        <errorMessage>More than one account cannot be associated to this Team Room</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Team_Room_Type_And_Associate</fullName>
        <active>false</active>
        <description>FV2:This validation rule is to to ensure that Account can only be associated to a Team Room if the Team Room type(TR_Type__c) is ‘External Single Party’ or ‘External Multi Party’</description>
        <errorConditionFormula>NOT(Team_Room__r.RecordType.Name =&apos;External Multi-Party&apos;  || Team_Room__r.RecordType.Name =&apos;External Single party&apos;)</errorConditionFormula>
        <errorMessage>Account cannot be associated to this Team Room</errorMessage>
    </validationRules>
</CustomObject>